Fix footer responsivnes on tablets

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,10 +92,10 @@ body {
 .footer {
     text-align: center;
     margin-bottom: 10px;
-    bottom: 0;
+    bottom: -50px;
     width: 100%;
     height: 100px;
-    position: fixed;
+    position: relative;
 }
 
 footer h2 {
@@ -130,7 +130,7 @@ footer i {
 
 /** responsivnes **/
 
-@media screen and (max-width: 710px) {
+@media screen and (max-width: 900px) {
     .score-area {
         margin-top: 0;
     }
